fixed the tabs so they shouldn't make you scroll on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,22 +84,3 @@
   color: blue;
 }
 
-.tab-list {
-  border-bottom: 1px solid #ccc;
-  padding-left: 0;
-  display: flex;
-  list-style: none
-}
-
-.tab-list-item {
-  list-style: none;
-  margin-bottom: 1px;
-  padding: 0.5rem 0.75rem;
-}
-
-.tab-list-active {
-  list-style: none;
-  background-color: white;
-  border: solid black;
-  border-width: 1px 1px 0 1px;
-}
