--- a/client/src/components/TacoLog/TacoVeiw.css
+++ b/client/src/components/TacoLog/TacoVeiw.css
@@ -60,3 +60,27 @@ form {
   width: 300px;
   height: auto;
 }
+
+.tab-list {
+  border-bottom: 1px solid #ccc;
+  padding-left: 0;
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  font-size: 15px
+}
+
+.tab-list-item {
+  list-style: none;
+  margin-bottom: 1px;
+  padding: 0.5rem 0.5rem;
+}
+
+.tab-list-active {
+  list-style: none;
+  background-color: white;
+  color: red;
+}
+.tabs {
+  width: 95vw;
+}
